// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders only subtotal + computed taxes 1`] = `
.c0 {
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 5px;
  text-align: right;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 5px;
  padding-right: 8px;
  text-align: left;
}

<table
  className="c0"
>
  <tbody>
    <tr>
      <td
        className="c1"
      >
        Subtotal
      </td>
      <td
        className="c2"
      >
        $24.42
      </td>
    </tr>
    <tr>
      <td
        className="c1"
      >
        Tax
      </td>
      <td
        className="c2"
      >
        $4.44
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Renders only subtotal 1`] = `
.c0 {
  width: 100%;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 5px;
  text-align: right;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 5px;
  padding-right: 8px;
  text-align: left;
}

<table
  className="c0"
>
  <tbody>
    <tr>
      <td
        className="c1"
      >
        Subtotal
      </td>
      <td
        className="c2"
      >
        $24.42
      </td>
    </tr>
  </tbody>
</table>
`;
